test/errors/type/collections/set/__bor1.yasl
echo mt.lookup(collections.set(), .__bor)(collections.set(), true)
